@@ -1,34 +1,23 @@
 #!/bin/sh
 
+# Copyright © 2026 Petr Panteleyev
+# SPDX-License-Identifier: BSD-2-Clause
 if [ -z "$1" ]
 then
-  echo "Usage: sudo install.sh <install dir>"
+  echo "Usage: install.sh <install dir>"
   exit
 fi
 
 LAUNCH_DIR=$(cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd)
-INSTALL_DIR=$1/password-manager
+INSTALL_DIR=$(realpath -m "$1")/password-manager
 
-echo -n "Installing into $INSTALL_DIR..."
+echo -n "Installing into $INSTALL_DIR... "
 mkdir -p $INSTALL_DIR
 rm -rf $INSTALL_DIR/*
-cp $LAUNCH_DIR/../icons/icon.png $INSTALL_DIR
-cp -r $LAUNCH_DIR/../target/jlink/* $INSTALL_DIR
+cp -r $LAUNCH_DIR/../target/dist/Password\ Manager/* $INSTALL_DIR
+echo "done"
 
-echo "
-#!/bin/sh
-$INSTALL_DIR/bin/java \\
-  -XX:NewRatio=1 \\
-  -Xms250m \\
-  -Xmx250m \\
-  -XX:+UseCompactObjectHeaders \\
-  --enable-native-access=javafx.graphics \\
-  --sun-misc-unsafe-memory-access=allow \\
-  --module password.manager/org.panteleyev.pwdmanager.PasswordManagerApplication
-" > $INSTALL_DIR/password-manager.sh
-
-chmod +x $INSTALL_DIR/password-manager.sh
-
+echo -n "Creating desktop entry... "
 echo "[Desktop Entry]
 Type=Application
 Version=1.5
@@ -36,9 +25,8 @@ Name=Password Manager
 Name[ru_RU]=Менеджер паролей
 Comment=Application to store passwords and other sensitive information
 Comment[ru_RU]=Хранение паролей и другой секретной информации
-Icon=$INSTALL_DIR/icon.png
-Exec=/bin/sh $INSTALL_DIR/password-manager.sh
+Icon=$INSTALL_DIR/lib/Password\sManager.png
+Exec=\"$INSTALL_DIR/bin/Password Manager\"
 Categories=Utility;Java;
-" > $INSTALL_DIR/password-manager.desktop
-
+" > $HOME/.local/share/applications/password-manager.desktop
 echo "done"
